How to reduce hallucination

--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -542,7 +542,8 @@
    "cell_type": "markdown",
    "source": [
     "#### Note that the student's solution is actually not correct.\n",
-    "#### We can fix this by instructing the model to work out its own solution first."
+    "\n",
+    "We can fix this by instructing the model to work out its own solution first."
    ],
    "metadata": {
     "collapsed": false
@@ -683,6 +684,18 @@
      "end_time": "2023-05-02T09:37:16.217115Z",
      "start_time": "2023-05-02T09:36:58.603875Z"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## How to reduce hallucination\n",
+    "\n",
+    "* Ask the model to first find relevant information\n",
+    "* The answer the question based on the relevant information"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
