Reduce hallucination by improving prompt

--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -551,15 +551,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The student's solution is correct.\n",
-      "\n",
-      "Actual solution:\n",
+      "Steps to work out the solution and your solution here:\n",
       "Let x be the size of the installation in square feet.\n",
       "Costs:\n",
       "1. Land cost: 100x\n",
@@ -568,10 +566,10 @@
       "Total cost: 100x + 250x + 100,000 + 10x = 360x + 100,000\n",
       "\n",
       "Is the student's solution the same as actual solution just calculated:\n",
-      "Yes\n",
+      "No\n",
       "\n",
       "Student grade:\n",
-      "Correct\n"
+      "Incorrect\n"
      ]
     }
    ],
@@ -638,8 +636,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:58.604699Z",
-     "start_time": "2023-05-02T09:36:51.288885Z"
+     "end_time": "2023-05-02T18:05:50.353087Z",
+     "start_time": "2023-05-02T18:05:42.929378Z"
     }
    }
   },
@@ -709,14 +707,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [],
-   "source": [],
+   "execution_count": 18,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This product does not exist.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "First of all, make sure that the AeroGlide UltraSlim Smart Toothbrush by Boie exists.\n",
+    "If this product exists, then tell me about AeroGlide UltraSlim Smart Toothbrush by Boie, otherwise just says \"This product does not exist\".\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:37:16.223847Z",
-     "start_time": "2023-05-02T09:37:16.221820Z"
+     "end_time": "2023-05-02T18:10:05.314921Z",
+     "start_time": "2023-05-02T18:10:04.343607Z"
     }
    }
   },
