Update hallucination solution

--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -38,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:04.469663Z",
-     "start_time": "2023-05-02T09:36:04.255107Z"
+     "end_time": "2023-05-03T16:15:44.402439Z",
+     "start_time": "2023-05-03T16:15:43.657470Z"
     }
    }
   },
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
@@ -72,8 +72,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:04.472996Z",
-     "start_time": "2023-05-02T09:36:04.469950Z"
+     "end_time": "2023-05-03T16:15:44.406216Z",
+     "start_time": "2023-05-03T16:15:44.402936Z"
     }
    }
   },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -129,8 +129,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:07.570962Z",
-     "start_time": "2023-05-02T09:36:04.475469Z"
+     "end_time": "2023-05-03T16:15:47.754176Z",
+     "start_time": "2023-05-03T16:15:44.410636Z"
     }
    }
   },
@@ -146,32 +146,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[\n",
-      "  {\n",
-      "    \"book_id\": 1,\n",
+      "{\n",
+      "  \"book1\": {\n",
       "    \"title\": \"The Lost City of Zorath\",\n",
       "    \"author\": \"Aria Blackwood\",\n",
       "    \"genre\": \"Fantasy\"\n",
       "  },\n",
-      "  {\n",
-      "    \"book_id\": 2,\n",
-      "    \"title\": \"The Last Hope\",\n",
+      "  \"book2\": {\n",
+      "    \"title\": \"The Last Survivors\",\n",
       "    \"author\": \"Ethan Stone\",\n",
       "    \"genre\": \"Science Fiction\"\n",
       "  },\n",
-      "  {\n",
-      "    \"book_id\": 3,\n",
-      "    \"title\": \"The Secret of the Blue Moon\",\n",
+      "  \"book3\": {\n",
+      "    \"title\": \"The Secret Life of Shadows\",\n",
       "    \"author\": \"Lila Rose\",\n",
       "    \"genre\": \"Mystery\"\n",
       "  }\n",
-      "]\n"
+      "}\n"
      ]
     }
    ],
@@ -188,8 +185,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:13.966053Z",
-     "start_time": "2023-05-02T09:36:07.571224Z"
+     "end_time": "2023-05-03T16:15:55.974679Z",
+     "start_time": "2023-05-03T16:15:47.759337Z"
     }
    }
   },
@@ -255,14 +252,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:21.387213Z",
-     "start_time": "2023-05-02T09:36:13.976113Z"
+     "end_time": "2023-05-03T16:16:05.182574Z",
+     "start_time": "2023-05-03T16:15:55.977864Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
@@ -307,8 +304,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:41:14.333152Z",
-     "start_time": "2023-05-02T09:41:13.487866Z"
+     "end_time": "2023-05-03T16:16:06.362894Z",
+     "start_time": "2023-05-03T16:16:05.185716Z"
     }
    }
   },
@@ -352,8 +349,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:26.814619Z",
-     "start_time": "2023-05-02T09:36:22.206014Z"
+     "end_time": "2023-05-03T16:16:10.866800Z",
+     "start_time": "2023-05-03T16:16:06.362623Z"
     }
    }
   },
@@ -377,13 +374,13 @@
      "output_type": "stream",
      "text": [
       "Completion for prompt 1:\n",
-      "1 - Siblings Jack and Jill go on a quest to fetch water from a hilltop well, but misfortune strikes as they both tumble down the hill, yet they remain undeterred and continue exploring with delight.\n",
-      "2 - Les frères et sœurs Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur frappe alors qu'ils tombent tous les deux de la colline, mais ils restent indéfectibles et continuent à explorer avec plaisir.\n",
-      "3 - Jack, Jill\n",
+      "1 - Jack and Jill go on a quest to fetch water from a well, but misfortune strikes as Jack trips and tumbles down the hill, with Jill following suit, yet they return home slightly battered but with their adventurous spirits undimmed.\n",
+      "2 - Jack et Jill partent en quête d'eau d'un puits, mais la malchance frappe quand Jack trébuche sur une pierre et dévale la colline, suivi de Jill, mais ils rentrent chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\n",
+      "3 - Jack, Jill.\n",
       "4 - {\n",
-      "     \"french_summary\": \"Les frères et sœurs Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur frappe alors qu'ils tombent tous les deux de la colline, mais ils restent indéfectibles et continuent à explorer avec plaisir.\",\n",
-      "     \"num_names\": 2\n",
-      "   }\n"
+      "    \"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits, mais la malchance frappe quand Jack trébuche sur une pierre et dévale la colline, suivi de Jill, mais ils rentrent chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\",\n",
+      "    \"num_names\": 2\n",
+      "}\n"
      ]
     }
    ],
@@ -421,8 +418,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:36.794040Z",
-     "start_time": "2023-05-02T09:36:26.817561Z"
+     "end_time": "2023-05-03T16:16:26.737274Z",
+     "start_time": "2023-05-03T16:16:10.870117Z"
     }
    }
   },
@@ -445,10 +442,10 @@
      "text": [
       "\n",
       "Completion for prompt 2:\n",
-      "Summary: Jack and Jill go on a quest to fetch water from a hilltop well, but misfortune strikes and they both tumble down the hill, returning home slightly battered but with their adventurous spirits undimmed. \n",
-      "Translation: Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur survient et ils tombent tous les deux, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\n",
+      "Summary: Jack and Jill go on a quest to fetch water from a well, but misfortune strikes and they tumble down the hill, yet they remain adventurous and continue exploring.\n",
+      "Translation: Jack et Jill partent en quête d'eau d'un puits, mais la malchance frappe et ils tombent de la colline, mais ils restent aventureux et continuent d'explorer.\n",
       "Names: Jack, Jill\n",
-      "Output JSON: {\"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits au sommet d'une colline, mais un malheur survient et ils tombent tous les deux, rentrant chez eux légèrement meurtris mais avec leurs esprits aventureux intacts.\", \"num_names\": 2}\n"
+      "Output JSON: {\"french_summary\": \"Jack et Jill partent en quête d'eau d'un puits, mais la malchance frappe et ils tombent de la colline, mais ils restent aventureux et continuent d'explorer.\", \"num_names\": 2}\n"
      ]
     }
    ],
@@ -478,8 +475,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:50.417473Z",
-     "start_time": "2023-05-02T09:36:36.794372Z"
+     "end_time": "2023-05-03T16:16:37.796034Z",
+     "start_time": "2023-05-03T16:16:26.738838Z"
     }
    }
   },
@@ -494,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -533,8 +530,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:36:51.285637Z",
-     "start_time": "2023-05-02T09:36:50.419277Z"
+     "end_time": "2023-05-03T16:19:05.548394Z",
+     "start_time": "2023-05-03T16:19:04.389235Z"
     }
    }
   },
@@ -551,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -636,8 +633,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T18:05:50.353087Z",
-     "start_time": "2023-05-02T18:05:42.929378Z"
+     "end_time": "2023-05-03T16:20:04.602599Z",
+     "start_time": "2023-05-03T16:19:56.404273Z"
     }
    }
   },
@@ -653,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -679,8 +676,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T09:37:16.217115Z",
-     "start_time": "2023-05-02T09:36:58.603875Z"
+     "end_time": "2023-05-03T16:21:14.018103Z",
+     "start_time": "2023-05-03T16:20:54.616265Z"
     }
    }
   },
@@ -707,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
@@ -720,7 +717,7 @@
    "source": [
     "prompt = f\"\"\"\n",
     "First of all, make sure that the AeroGlide UltraSlim Smart Toothbrush by Boie exists.\n",
-    "If this product exists, then tell me about AeroGlide UltraSlim Smart Toothbrush by Boie, otherwise just says \"This product does not exist\".\n",
+    "If this product exists, then tell me about it, otherwise just says \"This product does not exist\".\n",
     "\"\"\"\n",
     "response = get_completion(prompt)\n",
     "print(response)"
@@ -728,8 +725,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-02T18:10:05.314921Z",
-     "start_time": "2023-05-02T18:10:04.343607Z"
+     "end_time": "2023-05-03T16:21:51.760846Z",
+     "start_time": "2023-05-03T16:21:50.456064Z"
     }
    }
   },
@@ -761,6 +758,15 @@
     "- In the course, we are using a backslash `\\` to make the text fit on the screen without inserting newline '\\n' characters.\n",
     "- GPT-3 isn't really affected whether you insert newline characters or not.  But when working with LLMs in general, you may consider whether newline characters in your prompt may affect the model's performance.\n"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
