Fixe wrong answer by changing a ':' to '?'. Why??

--- a/Guidelines.ipynb
+++ b/Guidelines.ipynb
@@ -522,11 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-05-10T08:47:04.667761Z",
-     "start_time": "2023-05-10T08:46:49.247613Z"
+     "end_time": "2023-05-10T08:53:06.479949Z",
+     "start_time": "2023-05-10T08:52:58.957423Z"
     }
    },
    "outputs": [
@@ -534,25 +534,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "To calculate the total cost for the first year of operations as a function of the number of square feet, we need to add up the costs of land, solar panels, and maintenance.\n",
-      "\n",
       "Let x be the size of the installation in square feet.\n",
-      "\n",
       "Costs:\n",
-      "1. Land cost: $100 / square foot * x square feet = $100x\n",
-      "2. Solar panel cost: $250 / square foot * x square feet = $250x\n",
-      "3. Maintenance cost: $100,000 + $10 / square foot * x square feet = $100,000 + $10x\n",
+      "1. Land cost: 100x\n",
+      "2. Solar panel cost: 250x\n",
+      "3. Maintenance cost: 100,000 + 10x\n",
+      "Total cost: 100x + 250x + 100,000 + 10x = 360x + 100,000\n",
       "\n",
-      "Total cost: $100x + $250x + $100,000 + $10x = $360x + $100,000\n",
+      "Is the student's solution the same as actual solution\n",
+      "just calculated?\n",
+      "No\n",
       "\n",
-      "Is the student's solution the same as actual solution just calculated:\n",
-      "```\n",
-      "Yes\n",
-      "```\n",
       "Student grade:\n",
-      "```\n",
-      "correct\n",
-      "```\n"
+      "Incorrect\n"
      ]
     }
    ],
@@ -581,7 +575,7 @@
     "steps to work out the solution and your solution here\n",
     "```\n",
     "Is the student's solution the same as actual solution\n",
-    "just calculated:\n",
+    "just calculated?\n",
     "```\n",
     "yes or no\n",
     "```\n",
