Add some experiments on extracting information rather that summarizing

--- a/Summarizing.ipynb
+++ b/Summarizing.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -26,12 +26,16 @@
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T14:14:30.094836Z",
+     "start_time": "2023-05-10T14:14:29.865308Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"): # Andrew mentioned that the prompt/ completion paradigm is preferable for this class\n",
@@ -44,7 +48,11 @@
     "    return response.choices[0].message[\"content\"]\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T14:14:43.227690Z",
+     "start_time": "2023-05-10T14:14:43.222785Z"
+    }
    }
   },
   {
@@ -58,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "prod_review = \"\"\"\n",
@@ -73,7 +81,11 @@
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T15:57:55.624359Z",
+     "start_time": "2023-05-10T15:57:55.619135Z"
+    }
    }
   },
   {
@@ -87,8 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product\n",
@@ -104,7 +124,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T15:58:03.913762Z",
+     "start_time": "2023-05-10T15:58:01.331838Z"
+    }
    }
   },
   {
@@ -118,8 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The panda plush toy arrived a day earlier than expected, but the customer felt it was a bit small for the price paid.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product\n",
@@ -137,7 +169,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T15:59:22.584617Z",
+     "start_time": "2023-05-10T15:59:20.194729Z"
+    }
    }
   },
   {
@@ -151,13 +187,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This panda plush toy is soft, cute, and loved by the reviewer's daughter. However, it is considered a bit small for the price paid, and there may be other options that offer better value.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to generate a short summary of a product\n",
     "review from an ecommerce site to give feedback to the\n",
-    "pricing deparmtment, responsible for determining the\n",
+    "pricing department, responsible for determining the\n",
     "price of the product.\n",
     "\n",
     "Summarize the review below, delimited by triple\n",
@@ -171,7 +215,56 @@
     "print(response)"
    ],
    "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T15:59:49.826467Z",
+     "start_time": "2023-05-10T15:59:46.109732Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Summarize for the customer experience department"
+   ],
+   "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer loved the panda plush toy's softness and cuteness, but felt it was small for the price. They were pleased with the early delivery.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Your task is to generate a short summary of a product\n",
+    "review from an ecommerce site to give feedback to the\n",
+    "customer experience department, responsible improving the customer experience.\n",
+    "\n",
+    "Summarize the review below, delimited by triple\n",
+    "backticks, in at most 30 words, and focusing only on aspects\n",
+    "that are relevant to the customer experience.\n",
+    "\n",
+    "Review: ```{prod_review}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:28:43.803773Z",
+     "start_time": "2023-05-10T16:28:37.822334Z"
+    }
    }
   },
   {
@@ -188,8 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The product arrived a day earlier than expected.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "Your task is to extract relevant information from\n",
@@ -207,7 +308,81 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:44:40.530167Z",
+     "start_time": "2023-05-10T16:44:39.127108Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer thinks the panda plush toy is cute and arrived early, but is a bit small for the price paid. Suggest exploring other options for a better value.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Your task is to extract relevant information from\n",
+    "a product review from an ecommerce site to give\n",
+    "feedback to the pricing department.\n",
+    "\n",
+    "From the review below, delimited by triple quotes\n",
+    "extract the information relevant to pricing. Limit to 30 words.\n",
+    "\n",
+    "Review: ```{prod_review}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:45:29.165862Z",
+     "start_time": "2023-05-10T16:45:26.397929Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The customer enjoyed the product's softness and cuteness, but felt it was small for the price. The early delivery was a positive experience.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "Your task is to extract relevant information from\n",
+    "a product review from an ecommerce site to give\n",
+    "feedback to the customer experience department.\n",
+    "\n",
+    "From the review below, delimited by triple quotes\n",
+    "extract the information relevant to customer experience. Limit to 30 words.\n",
+    "\n",
+    "Review: ```{prod_review}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:46:22.035829Z",
+     "start_time": "2023-05-10T16:46:18.879217Z"
+    }
    }
   },
   {
