Extract sentiment (positive / negative) from the review

--- a/Summarizing.ipynb
+++ b/Summarizing.ipynb
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "review_1 = prod_review\n",
@@ -472,15 +472,34 @@
     "reviews = [review_1, review_2, review_3, review_4]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:50:53.920102Z",
+     "start_time": "2023-05-10T16:50:53.909086Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (length 18): Soft and cute panda plush toy loved by daughter, but a bit small for the price. Arrived early.\n",
+      "\n",
+      "2 (length 13): Great lamp with storage, fast shipping, and excellent customer service. Easy to assemble.\n",
+      "\n",
+      "3 (length 14): Good battery life, small toothbrush head, good deal at $50, makes teeth feel clean.\n",
+      "\n",
+      "4 (length 24): Mixed review: Priced well during seasonal sale, but increased later. Base quality not as good as previous models. Motor had issues after a year.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(len(reviews)):\n",
+    "for i, review in enumerate(reviews, start=1):\n",
     "    prompt = f\"\"\"\n",
     "    Your task is to generate a short summary of a product\n",
     "    review from an ecommerce site.\n",
@@ -488,14 +507,18 @@
     "    Summarize the review below, delimited by triple\n",
     "    backticks in at most 20 words.\n",
     "\n",
-    "    Review: ```{reviews[i]}```\n",
+    "    Review: ```{review}```\n",
     "    \"\"\"\n",
     "\n",
     "    response = get_completion(prompt)\n",
-    "    print(i, response, \"\\n\")"
+    "    print(f\"{i} (length {len(response.split(' '))}): {response}\\n\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:57:46.749791Z",
+     "start_time": "2023-05-10T16:57:37.176994Z"
+    }
    }
   },
   {
@@ -505,6 +528,58 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Analyse if the review is positive or not"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (length 17): Positive: Soft and cute panda plush toy loved by daughter, arrived early. Negative: Small for the price.\n",
+      "\n",
+      "2 (length 10): Positive: Affordable lamp with storage, fast shipping, excellent customer service.\n",
+      "\n",
+      "3 (length 16): Mixed: Impressive battery life, but toothbrush head is too small. Good deal if bought around $50.\n",
+      "\n",
+      "4 (length 23): Mixed: The reviewer notes a price increase after a sale, but provides tips for using the product and mentions a decrease in quality.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, review in enumerate(reviews, start=1):\n",
+    "    prompt = f\"\"\"\n",
+    "    Your task is to generate a short summary of a product\n",
+    "    review from an ecommerce site.\n",
+    "\n",
+    "    Summarize the review below, delimited by triple\n",
+    "    backticks in at most 20 words. Prefix each review with the word \"Positive\", \"Negative\" or \"Mixed\"\n",
+    "    in order to indicate if the review is positive, negative, or mixed.\n",
+    "\n",
+    "    Review: ```{review}```\n",
+    "    \"\"\"\n",
+    "\n",
+    "    response = get_completion(prompt)\n",
+    "    print(f\"{i} (length {len(response.split(' '))}): {response}\\n\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-10T16:58:04.960276Z",
+     "start_time": "2023-05-10T16:57:56.642467Z"
+    }
    }
   },
   {
