--- a/Inferring.ipynb
+++ b/Inferring.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import openai\n",
@@ -26,12 +26,16 @@
     "openai.api_key  = os.getenv('OPENAI_API_KEY')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:12:29.458844Z",
+     "start_time": "2023-05-11T08:12:29.259047Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_completion(prompt, model=\"gpt-3.5-turbo\"):\n",
@@ -44,7 +48,11 @@
     "    return response.choices[0].message[\"content\"]"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:12:31.645695Z",
+     "start_time": "2023-05-11T08:12:31.624839Z"
+    }
    }
   },
   {
@@ -58,23 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "lamp_review = \"\"\"\n",
-    "Needed a nice lamp for my bedroom, and this one had \\\n",
-    "additional storage and not too high of a price point. \\\n",
-    "Got it fast.  The string to our lamp broke during the \\\n",
-    "transit and the company happily sent over a new one. \\\n",
-    "Came within a few days as well. It was easy to put \\\n",
-    "together.  I had a missing part, so I contacted their \\\n",
-    "support and they very quickly got me the missing piece! \\\n",
-    "Lumina seems to me to be a great company that cares \\\n",
+    "Needed a nice lamp for my bedroom, and this one had\n",
+    "additional storage and not too high of a price point.\n",
+    "Got it fast.  The string to our lamp broke during the\n",
+    "transit and the company happily sent over a new one.\n",
+    "Came within a few days as well. It was easy to put\n",
+    "together.  I had a missing part, so I contacted their\n",
+    "support and they very quickly got me the missing piece!\n",
+    "Lumina seems to me to be a great company that cares\n",
     "about their customers and products!!\n",
     "\"\"\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:14:48.368796Z",
+     "start_time": "2023-05-11T08:14:48.353750Z"
+    }
    }
   },
   {
@@ -88,12 +100,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentiment of the product review is positive.\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review,\n",
     "which is delimited with triple backticks?\n",
+    "\n",
+    "Review text: '''{lamp_review}'''\n",
+    "\"\"\"\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:14:53.960298Z",
+     "start_time": "2023-05-11T08:14:52.463860Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "What is the sentiment of the following product review,\n",
+    "which is delimited with triple backticks?\n",
+    "\n",
+    "Give your answer as a single word, either \"positive\"\n",
+    "or \"negative\".\n",
     "\n",
     "Review text: '''{lamp_review}'''\n",
     "\"\"\"\n",
@@ -105,15 +165,32 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Test mixed sentiment"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Positive\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
     "What is the sentiment of the following product review,\n",
     "which is delimited with triple backticks?\n",
     "\n",
-    "Give your answer as a single word, either \"positive\" \\\n",
+    "Give your answer as a single word, either \"positive\", \"mixed\"\n",
     "or \"negative\".\n",
     "\n",
     "Review text: '''{lamp_review}'''\n",
@@ -122,7 +199,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:18:02.458105Z",
+     "start_time": "2023-05-11T08:18:01.700971Z"
+    }
    }
   },
   {
