Try to extract information

--- a/Inferring.ipynb
+++ b/Inferring.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
@@ -201,8 +201,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-05-11T08:18:02.458105Z",
-     "start_time": "2023-05-11T08:18:01.700971Z"
+     "end_time": "2023-05-11T08:18:43.282134Z",
+     "start_time": "2023-05-11T08:18:42.521939Z"
     }
    }
   },
@@ -217,13 +217,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "satisfied, pleased, grateful, impressed, content\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Identify a list of emotions that the writer of the \\\n",
-    "following review is expressing. Include no more than \\\n",
-    "five items in the list. Format your answer as a list of \\\n",
+    "Identify a list of emotions that the writer of the\n",
+    "following review is expressing. Include no more than\n",
+    "five items in the list. Format your answer as a list of\n",
     "lower-case words separated by commas.\n",
     "\n",
     "Review text: '''{lamp_review}'''\n",
@@ -232,7 +240,11 @@
     "print(response)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:18:47.069951Z",
+     "start_time": "2023-05-11T08:18:45.719917Z"
+    }
    }
   },
   {
@@ -246,12 +258,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No\n"
+     ]
+    }
+   ],
    "source": [
     "prompt = f\"\"\"\n",
-    "Is the writer of the following review expressing anger?\\\n",
-    "The review is delimited with triple backticks. \\\n",
+    "Is the writer of the following review expressing anger?\n",
+    "The review is delimited with triple backticks.\n",
     "Give your answer as either yes or no.\n",
     "\n",
     "Review text: '''{lamp_review}'''\n",
@@ -260,7 +280,52 @@
     "print(response)"
    ],
    "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:19:36.594885Z",
+     "start_time": "2023-05-11T08:19:35.652163Z"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Extract information"
+   ],
+   "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Improvement suggestion: None. The review does not suggest any improvements for the company.\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompt = f\"\"\"\n",
+    "If the writer of the following review suggests improvement that\n",
+    "the company provide, extract it and show it.\n",
+    "The review is delimited with triple backticks.\n",
+    "\n",
+    "Review text: ```{lamp_review}```\n",
+    "\"\"\"\n",
+    "\n",
+    "response = get_completion(prompt)\n",
+    "print(response)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-05-11T08:22:45.497146Z",
+     "start_time": "2023-05-11T08:22:43.167416Z"
+    }
    }
   },
   {
